[IMP] #119  - Implementation of address section in Apply for Debit Card screen

--- a/app/src/main/res/layout/fragment_apply_for_debit_cart.xml
+++ b/app/src/main/res/layout/fragment_apply_for_debit_cart.xml
@@ -169,14 +169,14 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="201, KALASH ENCLAVE XXXX"
+                    android:text="@{vm.formattedAddress}"
                     android:gravity="center"
                     android:layout_gravity="center_horizontal"
                     android:textStyle="bold"
                     android:drawablePadding="@dimen/_5sdp"
                     tools:text="201, KALASH ENCLAVE XXXX"
                     android:textAllCaps="true"
-                    android:drawableStart="@drawable/ic_action_img_icon"
+                    android:drawableStart="@drawable/ic_address_location"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_12ssp"
