[IMP] #78  - Cashfreeamount added in Apply Debit Card in Portfolio  - Dynamic amount added in Tarraki Zyadda Screen

--- a/app/src/main/res/layout/fragment_tarrakki_zyaada.xml
+++ b/app/src/main/res/layout/fragment_tarrakki_zyaada.xml
@@ -73,7 +73,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:text="@string/what_is_tarrakki_zyaada_details"
+                        android:text="@{@string/what_is_tarrakki_zyaada_details(vm.cashfreeamount)}"
                         android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
                 </net.cachapa.expandablelayout.ExpandableLayout>
