--- a/app/src/main/res/layout/dialog_invest_stratergy.xml
+++ b/app/src/main/res/layout/dialog_invest_stratergy.xml
@@ -47,11 +47,13 @@
 
         <TextView
             android:id="@+id/tvLumpsum"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_32sdp"
             android:text="@string/enter_one_time_lumpsum_amount"
             android:textAllCaps="true"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvInvestmentL" />
@@ -76,6 +78,7 @@
             android:hint="@string/enter_one_time_lumpsum_amount"
             android:inputType="number"
             android:maxLines="1"
+            android:singleLine="true"
             android:nextFocusForward="@+id/edtSIPAmount"
             android:paddingStart="@dimen/_24sdp"
             android:paddingTop="@dimen/space_8"
@@ -91,11 +94,13 @@
 
         <TextView
             android:id="@+id/tvSIPAmountL"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_space"
             android:text="@string/monthly_investment_amount_sip_"
             android:textAllCaps="true"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/edtLumpsum" />
@@ -120,6 +125,7 @@
             android:hint="@string/enter_sip_amount"
             android:inputType="number"
             android:maxLines="1"
+            android:singleLine="true"
             android:nextFocusForward="@+id/edtDurations"
             android:paddingStart="@dimen/_24sdp"
             android:paddingTop="@dimen/space_8"
