--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -475,6 +475,146 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/clConsumerLoanInvestment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/default_space"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:layout_marginEnd="@dimen/default_space"
+                    android:background="@drawable/shape_cart_view"
+                    android:elevation="@dimen/space_2"
+                    android:orientation="vertical"
+                    android:padding="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/clTarrakkiZyaada">
+
+                    <TextView
+                        android:id="@+id/tvConsumerLoanInvestmentlbl"
+                        android:layout_width="wrap_content"
+                        android:layout_height="@dimen/_40sdp"
+                        android:layout_marginBottom="@dimen/default_space"
+                        android:adjustViewBounds="true"
+                        android:gravity="center_vertical"
+                        android:text="@string/consumer_loan_investment"
+                        app:layout_constraintBottom_toTopOf="@id/barrier3"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/ivConsumerLoanInvestment"
+                        android:layout_width="@dimen/_20sdp"
+                        android:layout_height="@dimen/_20sdp"
+                        android:background="@drawable/page_selected"
+                        android:src="@drawable/ic_keyboard_arrow_right_dark_gray"
+                        android:tint="@color/white"
+                        app:layout_constraintBottom_toBottomOf="@id/tvConsumerLoanInvestmentlbl"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/tvConsumerLoanInvestmentlbl" />
+
+                    <androidx.constraintlayout.widget.Barrier
+                        android:id="@+id/barrier3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:barrierDirection="bottom"
+                        app:constraint_referenced_ids="tvConsumerLoanInvestmentlbl" />
+
+                    <ImageView
+                        android:id="@+id/ivCl1"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/_72sdp"
+                        android:padding="@dimen/_8sdp"
+                        android:src="@drawable/key_benefits_1"
+                        app:layout_constraintEnd_toStartOf="@id/ivCl2"
+                        app:layout_constraintHorizontal_weight="3.25"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/barrier3" />
+
+                    <TextView
+                        android:id="@+id/tvCl1"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/space_8"
+                        android:gravity="center"
+                        android:paddingEnd="8dp"
+                        android:text="@string/earn_to_returns"
+                        android:textSize="@dimen/_9ssp"
+                        app:layout_constraintEnd_toEndOf="@id/ivCl1"
+                        app:layout_constraintStart_toStartOf="@id/ivCl1"
+                        app:layout_constraintTop_toBottomOf="@id/ivCl1" />
+
+                    <ImageView
+                        android:id="@+id/ivCl2"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/_72sdp"
+                        android:layout_marginStart="@dimen/space_8"
+                        android:layout_marginEnd="@dimen/space_8"
+                        android:padding="@dimen/_8sdp"
+                        android:src="@drawable/key_benefits_2"
+                        app:layout_constraintEnd_toStartOf="@id/ivCl3"
+                        app:layout_constraintHorizontal_weight="3.5"
+                        app:layout_constraintStart_toEndOf="@id/ivCl1"
+                        app:layout_constraintTop_toBottomOf="@id/barrier3" />
+
+                    <TextView
+                        android:id="@+id/tvCl2"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/space_8"
+                        android:gravity="center"
+                        android:text="@string/highly_diversified"
+                        android:textSize="@dimen/_9ssp"
+                        app:layout_constraintEnd_toEndOf="@id/ivCl2"
+                        app:layout_constraintStart_toStartOf="@id/ivCl2"
+                        app:layout_constraintTop_toBottomOf="@id/ivCl2" />
+
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="0dp"
+                        android:layout_marginTop="@dimen/_4sdp"
+                        android:background="@color/darker_gray"
+                        app:layout_constraintBottom_toBottomOf="@id/tvCl2"
+                        app:layout_constraintStart_toEndOf="@id/ivCl1"
+                        app:layout_constraintTop_toTopOf="@id/ivCl2" />
+
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="0dp"
+                        android:layout_marginTop="@dimen/_4sdp"
+                        android:background="@color/darker_gray"
+                        app:layout_constraintBottom_toBottomOf="@id/tvCl2"
+                        app:layout_constraintEnd_toStartOf="@id/ivCl3"
+                        app:layout_constraintTop_toTopOf="@id/ivCl2" />
+
+
+                    <ImageView
+                        android:id="@+id/ivCl3"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/_72sdp"
+                        android:padding="@dimen/_8sdp"
+                        android:src="@drawable/key_benefits_3"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_weight="3.25"
+                        app:layout_constraintStart_toEndOf="@id/ivCl2"
+                        app:layout_constraintTop_toBottomOf="@id/barrier3" />
+
+                    <TextView
+                        android:id="@+id/tvCl3"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/space_8"
+                        android:gravity="center"
+                        android:paddingStart="8dp"
+                        android:text="@string/rbi_registered_p2p_nbfc"
+                        android:textSize="@dimen/_9ssp"
+                        app:layout_constraintEnd_toEndOf="@id/ivCl3"
+                        app:layout_constraintStart_toStartOf="@id/ivCl3"
+                        app:layout_constraintTop_toBottomOf="@id/ivCl3" />
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvHomeItem"
                     android:layout_width="match_parent"
@@ -484,7 +624,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/clTarrakkiZyaada"
+                    app:layout_constraintTop_toBottomOf="@+id/clConsumerLoanInvestment"
                     tools:listitem="@layout/row_section_investment_item" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
