--- a/app/src/main/res/layout/fragment_home_invest.xml
+++ b/app/src/main/res/layout/fragment_home_invest.xml
@@ -126,7 +126,6 @@
                 android:layout_marginStart="@dimen/default_space"
                 android:layout_marginTop="@dimen/default_space"
                 android:layout_marginEnd="@dimen/default_space"
-                android:layout_marginBottom="@dimen/space_16"
                 android:background="@drawable/shape_cart_view"
                 android:elevation="2dp"
                 android:orientation="horizontal"
@@ -180,6 +179,74 @@
 
                 <ImageView
                     android:id="@+id/img_arrow1"
+                    android:layout_alignParentEnd="true"
+                    android:layout_width="@dimen/_32sdp"
+                    android:layout_height="@dimen/_32sdp"
+                    android:src="@drawable/ic_keyboard_arrow_right_dark_gray"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/lyt_consumer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/default_space"
+                android:layout_marginTop="@dimen/default_space"
+                android:layout_marginEnd="@dimen/default_space"
+                android:layout_marginBottom="@dimen/space_16"
+                android:background="@drawable/shape_cart_view"
+                android:elevation="2dp"
+                android:orientation="horizontal"
+                android:padding="@dimen/space_16">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_alignParentStart="true"
+                    android:id="@+id/img_logo2"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:elevation="12dp"
+                    android:layout_marginStart="@dimen/space_3"
+                    app:cardBackgroundColor="@color/circular_bg"
+                    app:cardCornerRadius="30dp">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:adjustViewBounds="true"
+                        android:padding="@dimen/space_12"
+                        android:src="@drawable/ic_equity_advisory"
+                        tools:src="@drawable/ic_equity_advisory" />
+
+                </androidx.cardview.widget.CardView>
+
+                <LinearLayout
+                    android:layout_toEndOf="@id/img_logo2"
+                    android:layout_toStartOf="@id/img_arrow2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/space_16"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/lato_semibold"
+                        android:text="Consumer Loans via Liquiloans"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:textColor="@color/black" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/space_4"
+                        android:fontFamily="@font/lato_semibold"
+                        android:text="Diversify your debt investments by investing in India's leading RBI registered NBFC-P2P. Earn 7% to 11% returns. Build a highly liquid &amp; diversified debt portfolio. Ideal investment horizon from 1 month to 5 years."
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/img_arrow2"
                     android:layout_alignParentEnd="true"
                     android:layout_width="@dimen/_32sdp"
                     android:layout_height="@dimen/_32sdp"
